--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -6,7 +6,7 @@
   // -webkit-backdrop-filter: blur(10px);
   // backdrop-filter: blur(10px);
   /* Because we want header to be stick later we are using a fixed height */
-  height: 10rem;
+  height: 8rem;
   padding: 0 4.8rem;
   position: relative;
   // overflow-x: hidden;
@@ -16,14 +16,8 @@
   }
 
   &__logo {
-    height: 8rem;
+    height: 6rem;
     filter: invert(1);
-  }
-
-  @include respond(md-phone) {
-    &__logo {
-      height: 6rem;
-    }
   }
 
   &__main-nav-list {
@@ -62,16 +56,16 @@
     transform: translateY(1px);
   }
 
-  &--scrolling {
-    background-color: $color-main-dark;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-    // -webkit-backdrop-filter: blur(10px);
-    // backdrop-filter: blur(10px);
-  }
+  // &--scrolling {
+  //   background-color: $color-main-dark;
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   z-index: 100;
+  //   // -webkit-backdrop-filter: blur(10px);
+  //   // backdrop-filter: blur(10px);
+  // }
 }
 
 // MOBILE NAVIGATION
